apps/homebridge/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
spec:
  selector: { app: homebridge }
  ports:
  - name: http
    port: 80
    targetPort: 8581
