apps/homebridge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge
  namespace: homebridge
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  tls:
  - hosts: [ "homebridge.downhill.dozzly.network" ]
    secretName: homebridge-tls
  rules:
  - host: homebridge.downhill.dozzly.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: { name: homebridge, port: { number: 80 } }
